--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
 <a href="file:///E:/Resume.html"td class="td" button>Resume</td></a></button>
 <br>
 <br>
-<a href="file:///E:/Pictures.html"td class="td" button>Pictures</td></a></button>
+<a href="https://htmlandcss2023.github.io/last/Pictures.html"td class="td" button>Pictures</td></a></button>
 <br>
 </tr>
