--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 <tr class="tr">
 
 <br>
-<a href="file:///E:/biodata.html"td class="td" button>Biodata</td></a></button>
+<a href="https://htmlandcss2023.github.io/last/biodata.html"td class="td" button>Biodata</td></a></button>
 <br>
 <br>
-<a href="file:///E:/grades.html"td class="td" button>Grades</td></a></button>
+<a href="https://htmlandcss2023.github.io/last/grades.html"td class="td" button>Grades</td></a></button>
 <br>
 <br>
-<a href="file:///E:/Resume.html"td class="td" button>Resume</td></a></button>
+<a href="https://htmlandcss2023.github.io/last/Resume.html"td class="td" button>Resume</td></a></button>
 <br>
 <br>
 <a href="https://htmlandcss2023.github.io/last/Pictures.html"td class="td" button>Pictures</td></a></button>
