--- a/biodata.html
+++ b/biodata.html
@@ -104,9 +104,9 @@
 	</li>
 </ul>
 
-<<a href="file:///E:/table.html"button class="home-button">Home
+<<a href="https://htmlandcss2023.github.io/last/"button class="home-button">Home
 </button></a>
 <br>
-<a href="file:///E:/grades.html"button class="Next-button">Next
+<a href="https://htmlandcss2023.github.io/last/grades.html"button class="Next-button">Next
 </button></a>
 <br>
