--- a/grades.html
+++ b/grades.html
@@ -101,9 +101,9 @@
 </br>
 <br>
 <br>
-<a href="file:///E:/table.html"button class="Home-button">Home
+<a href="https://htmlandcss2023.github.io/last/"button class="Home-button">Home
 </button></a>
-<a href="file:///E:/Resume.html"button class="Home-button">Next
+<a href="https://htmlandcss2023.github.io/last/Resume.html"button class="Home-button">Next
 </button></a>
-<a href="file:///E:/biodata.html" button class="prev">Prev.</button></a>
+<a href="https://htmlandcss2023.github.io/last/grades.html" button class="prev">Prev.</button></a>
 <br>
