--- a/Resume.html
+++ b/Resume.html
@@ -90,13 +90,13 @@
 	NCII in Css - passer
 </p>
 <br>
-<a href="file:///E:/table.html"button class="Home-button">Home
+<a href="https://htmlandcss2023.github.io/last/"button class="Home-button">Home
 </button></a>
 <br>
 <br>
-<a href="file:///E:/Pictures.html"button class="Home-button">Next
+<a href="https://htmlandcss2023.github.io/last/Pictures.html"button class="Home-button">Next
 </button></a>
 <br>
 <br>
-<a href="file:///E:/grades.html" button class="prev">Prev.</button></a>
+<a href="https://htmlandcss2023.github.io/last/Resume.html" button class="prev">Prev.</button></a>
 <br>
