--- a/Pictures.html
+++ b/Pictures.html
@@ -61,11 +61,11 @@
 
     <img src="14.jpg" alt="10" width="260px" height="250px">
 
-    <a href="file:///E:/table.html"button class="Home">
+    <a href="https://htmlandcss2023.github.io/last/"button class="Home">
     	Home
 </button></a>
 <br>
-<a href="file:///E:/Resume.html" class="prev">
+<a href="https://htmlandcss2023.github.io/last/Resume.html" class="prev">
 	Prev.
 </button></a>
 <br>
