--- a/grades.html
+++ b/grades.html
@@ -105,5 +105,5 @@
 </button></a>
 <a href="https://htmlandcss2023.github.io/last/Resume.html"button class="Home-button">Next
 </button></a>
-<a href="https://htmlandcss2023.github.io/last/grades.html" button class="prev">Prev.</button></a>
+<a href="https://htmlandcss2023.github.io/last/biodata.html" button class="prev">Prev.</button></a>
 <br>
