--- a/Resume.html
+++ b/Resume.html
@@ -98,5 +98,5 @@
 </button></a>
 <br>
 <br>
-<a href="https://htmlandcss2023.github.io/last/Resume.html" button class="prev">Prev.</button></a>
+<a href="https://htmlandcss2023.github.io/last/grades.html" button class="prev">Prev.</button></a>
 <br>
