--- a/Pictures.html
+++ b/Pictures.html
@@ -61,9 +61,7 @@
 
     <img src="14.jpg" alt="10" width="260px" height="250px">
 
-    <a href="https://htmlandcss2023.github.io/last/"button class="Home">
-    	Home
-</button></a>
+    <a href="https://htmlandcss2023.github.io/last/"button class="Home">Home</button></a>
 <br>
 <a href="https://htmlandcss2023.github.io/last/Resume.html" class="prev">
 	Prev.
