--- a/biodata.html
+++ b/biodata.html
@@ -69,7 +69,7 @@
 <h1 class="h1">
 	BIO-DATA
 </h1>
-<img class="img"src="bio.jpg" alt="BIO-DATA" height="150px" width="150px" align="right">
+<img class="img"src="lolo.jpg" alt="BIO-DATA" height="150px" width="150px" align="right">
 
 
 <ul class="ol">
