--- a/Pictures.html
+++ b/Pictures.html
@@ -51,7 +51,7 @@
 }
 </style>
 <h1 class="pictures">Pictures</h2>
-	<img src="1.jpg" alt="10" width="260px" height="250px">
+	<img src="1.jpg" alt="10" width="260px" height="250px" margin-left: 10px;>
 
     <img src="2.jpg" alt="10" width="260px" height="250px">
 
