--- a/Pictures.html
+++ b/Pictures.html
@@ -1,4 +1,7 @@
 <style>
+	.pic {
+		margin-left: 50px;
+	}
 	.pictures {
 		font-size: 60px;
 		font-weight: bold;
@@ -51,15 +54,15 @@
 }
 </style>
 <h1 class="pictures">Pictures</h2>
-	<img src="1.jpg" alt="10" width="260px" height="250px" margin-left: 10px;>
+	<img src="1.jpg" alt="10" width="260px" height="250px" class="pic">
 
-    <img src="2.jpg" alt="10" width="260px" height="250px">
+    <img src="2.jpg" alt="10" width="260px" height="250px" class="pic">
 
-    <img src="3.jpg" alt="10" width="260px" height="250px">
+    <img src="3.jpg" alt="10" width="260px" height="250px" class="pic">
 
-    <img src="4.jpg" alt="10" width="260px" height="250px">
+    <img src="4.jpg" alt="10" width="260px" height="250px" class="pic">
 
-    <img src="5.jpg" alt="10" width="260px" height="250px">
+    <img src="5.jpg" alt="10" width="260px" height="250px" class="pic">
 
     <a href="https://htmlandcss2023.github.io/last/"button class="Home">Home</button></a>
 <br>
