--- a/Pictures.html
+++ b/Pictures.html
@@ -64,6 +64,8 @@
 
     <img src="5.jpg" alt="10" width="260px" height="250px" class="pic">
 
+ <img src="6.gif" alt="10" width="260px" height="250px" class="pic">
+
     <a href="https://htmlandcss2023.github.io/last/"button class="Home">Home</button></a>
 <br>
 <a href="https://htmlandcss2023.github.io/last/Resume.html" class="prev">
