--- a/Resume.html
+++ b/Resume.html
@@ -47,6 +47,9 @@
 	}
 	body {
 		background-image: url("https://cdn1.vectorstock.com/i/1000x1000/99/60/abstract-background-vector-1009960.jpg");
+		background-position: center;
+		background-repeat: no-repeat;
+	        background-size: cover;
 	}
 </style>
 <h1 class="resume">
